@@ -3,6 +3,13 @@
    Entries may not always be in chronological/commit order.
    See license at the end of file. */
 
+2025-11-10 17:30 UTC+0100 Aleksander Czajczynski (hb fki.pl)
+  + .github/workflows/windows-arm64.yml
+    + Windows ARM64 runner
+
+  * .github/workflows/macos.yml
+    * install libpq from Homebrew
+
 2025-11-09 23:36 UTC+0100 Aleksander Czajczynski (hb fki.pl)
   * .github/workflows/windows.yml
     * switched libpq to test binary package, don't use otherwise
